# mysql-router

./: .gitignore  CMakeLists.txt  Doxyfile  License.txt  README  README.txt  config.h.in
ext/protobuf/: CMakeLists.txt
ext/protobuf/protobuf-3.0.0/: CHANGES.txt
ext/yassl/: CMakeLists.txt
ext/yassl/src/: buffer.cpp  yassl_int.cpp
ext/yassl/taocrypt/: CMakeLists.txt
mysql_harness/: CMakeLists.txt  README.txt
mysql_harness/cmake/: Arch.cmake  Check.cmake  Coverage.cmake  Docs.cmake  FindGMock.cmake  HarnessTesting.cmake  Plugin.cmake
mysql_harness/data/: main.conf
mysql_harness/examples/: harness.conf  harness.ini
mysql_harness/harness/: CMakeLists.txt  plugin.h.in
mysql_harness/harness/include/: arg_handler.h  common.h  config_parser.h  dim.h  filesystem.h  harness_assert.h  loader.h  logger.h  logging.h  plugin.h  queue.h  random_generator.h  unique_ptr.h
mysql_harness/harness/src/: arg_handler.cc  common.cc  config_parser.cc  designator.cc  designator.h  dim.cc  exception.h  filesystem-posix.cc  filesystem-windows.cc  filesystem.cc  loader-posix.cc  loader-windows.cc  loader.cc  loader_config.cc  logger.cc  logger.h  logging.cc  logging.h  logging_registry.cc  logging_registry.h  main.cc  random_generator.cc  utilities-posix.cc  utilities-windows.cc  utilities.cc  utilities.h
mysql_harness/harness/tests/: CMakeLists.txt  arghandler.cc  test_bug22104451.cc  test_common.cc  test_config.cc  test_designator.cc  test_dim_and_unique_ptr.cc  test_filesystem.cc  test_ip_address.cc  test_iterator.cc  test_keyring.cc  test_keyring_manager.cc  test_loader.cc  test_loader_lifecycle.cc  test_logger.cc  test_logging.cc  test_queue.cc  test_random_generator.cc  test_resolver.cc  test_utilities.cc
mysql_harness/internal/: README.md
mysql_harness/internal/checks/: build_all.py
mysql_harness/internal/hooks/: pre-receive  update
mysql_harness/plugins/: CMakeLists.txt
mysql_harness/plugins/keepalive/: CMakeLists.txt
mysql_harness/plugins/logger/: logger.cc
mysql_harness/plugins/syslog/: CMakeLists.txt
mysql_harness/shared/: CMakeLists.txt
mysql_harness/shared/src/: test_helpers.cc
packaging/WiX/: CMakeLists.txt  CPackWixConfig.cmake  create_msi.cmake.in  custom_ui.wxs  extra.wxs.in  mysql_router.wxs.in  mysql_router_extra.wxs.in  mysqlrouter.conf.in  mysqlrouter.ini.in  versioninfo.rc.in
packaging/WiX/ca/: CMakeLists.txt  CustomAction.cpp  CustomAction.def
shared/: CMakeLists.txt
shared/include/test/: helpers.h
shared/src/: test_helpers.cc
src/: CMakeLists.txt
src/fabric_cache/: CMakeLists.txt  fabric_cache_dev.cc
src/fabric_cache/src/: cache_api.cc  fabric.cc  fabric.h  fabric_cache.cc  fabric_cache.h  fabric_cache_plugin.cc  fabric_factory.cc  fabric_factory.h  fabric_metadata.h  plugin_config.cc  plugin_config.h  utils.cc  utils.h
src/fabric_cache/tests/: CMakeLists.txt  test_cache_plugin.cc  test_fabric_cache.cc  test_sample.cc
src/harness/: .gitignore  CMakeLists.txt  CPPLINT.cfg  Doxyfile.in  README.txt  plugin.h.in
src/harness/include/: dim.h  harness_assert.h  hostname_validator.h  mysql_router_thread.h  process_launcher.h  socket_operations.h  tcp_address.h
src/harness/internal/: README.md  exclude-from-release.txt
src/harness/shared/: CMakeLists.txt
src/harness/src/: arg_handler.cc  common.cc  designator.cc  filesystem-posix.cc  filesystem-windows.cc  filesystem.cc  hostname_validator.cc  loader-posix.cc  loader.cc  loader_config.cc  mysql_router_thread.cc  process_launcher.cc  socket_operations.cc  tcp_address.cc  utilities-posix.cc  utilities-windows.cc  utilities.h
src/harness/tests/: CMakeLists.txt  arghandler.cc  test_common.cc  test_config.cc  test_dim_and_unique_ptr.cc  test_hostname_validator.cc  test_ip_address.cc  test_iterator.cc  test_keyring_manager.cc  test_loader.cc  test_loader_lifecycle.cc  test_logging.cc  test_mysql_router_thread.cc  test_random_generator.cc  test_resolver.cc  test_utilities.cc
src/http/src/: CMakeLists.txt  http_client.cc  http_common.cc  http_request_impl.h  http_server_component.cc  http_server_plugin.cc  http_server_plugin.h  http_time.cc  posix_re.h  rest_cli.cc  rest_client.cc  static_files.cc
src/http/tests/: CMakeLists.txt  test_posix_re.cc  test_time.cc
src/keepalive/: CMakeLists.txt
src/keepalive/tests/: CMakeLists.txt
src/metadata_cache/: CMakeLists.txt  metadata_cache_dev.cc
src/metadata_cache/src/: cache_api.cc  cluster_metadata.cc  (+13 more)
src/mysql_protocol/: CMakeLists.txt
src/plugin_info/: CMakeLists.txt
src/router/: CMakeLists.txt
src/routing/: CMakeLists.txt
src/syslog/: CMakeLists.txt
src/x_protocol/: CMakeLists.txt
tests/: CMakeLists.txt  __init__.py  coverage.ignore  gcoverage.sh  helpers.h  test_config.cc  test_designator.cc  test_filesystem.cc  test_iterator.cc  test_loader.cc  test_plugin_keepalive.cc  test_utilities.cc
tests/component/: CMakeLists.txt  test_bootstrap.cc  test_bootstrap_system_deployment.cc  test_component_test_framework.cc  test_config.cc  test_logging.cc  test_master_key_reader_writer.cc  test_metadata_ttl.cc  test_mock_server.cc  test_rest_mock_server.cc  test_routing.cc  test_routing_connection.cc  test_routing_strategy.cc  test_user_option.cc
tests/data/: logger.cfg  tests-bad-1.cfg  tests-bad-2.cfg  tests-bad-3.cfg  tests-good-1.cfg  tests-good-2.cfg  tests.cfg
tests/fuzzers/: CMakeLists.txt  fuzz_router_uri.cc  fuzz_router_uri_tostring.cc
tests/helpers/: cmd_exec-windows.cc  cmd_exec-windows.h  cmd_exec.cc  cmd_exec.h  gtest_consoleoutput.h  helper_logger.cc  helper_logger.h  master_key_test_writer.cc  mysql_session_replayer.cc  mysql_session_replayer.h  process_launcher.cc  process_launcher.h  router_component_test.cc  router_component_test.h  router_test_helpers.cc  router_test_helpers.h  script_generator.cc  script_generator.h  tcp_port_pool.cc  tcp_port_pool.h
tests/legal/: copyright.py  license.py  project_name.py  test_legal.cc  test_project_name.cc
tests/plugins/: CMakeLists.txt  bad_one.cc  bad_two.cc  example.cc  magic.cc
tests/tools/: gtest_cxx.cc  python_exec.py
tools/plugin_info/: CMakeLists.txt
(+508 files in other folders)
